[tool.poetry]
name = "odtp-manuals"
version = "0.1.0"
description = "Documentation for the ODTP project"
authors = ["caviri <carlosvivarrios@gmail.com>"]
license = "\"AGPL 3.0\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.8"
mkdocs-ezglossary-plugin = "^1.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
